force-app/main/default/objects/Category__c/fields/Category_Amount__c.field-meta.xml
<CustomField>
    <fullName>Category_Amount__c</fullName>
    <label>Category Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>