force-app/main/default/objects/Category__c/fields/category_mail__c.field-meta.xml
<CustomField>
    <fullName>category_mail__c</fullName>
    <label>category mail</label>
    <type>Email</type>
</CustomField>