force-app/main/default/objects/Category__c/fields/location__c.field-meta.xml
<CustomField>
    <fullName>location__c</fullName>
    <label>location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Banglore</fullName>
            </value>
            <value>
                <fullName>Kadapa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>