force-app/main/default/objects/Category__c/fields/Number_of_Customers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Customers__c</fullName>
    <label>Number of Customers</label>
    <summaryForeignKey>Customer__c.Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>